force-app/main/default/objects/WorkOrder/fields/Booking_set_up_for_ticket_issuance__c.field-meta.xml
<CustomField>
    <fullName>Booking_set_up_for_ticket_issuance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-6981: Create a Ticketing/Refund Request</description>
    <label>Booking set up for ticket issuance?</label>
    <type>Checkbox</type>
</CustomField>