force-app/main/default/objects/WorkOrder/fields/Created_by_me__c.field-meta.xml
<CustomField>
    <fullName>Created_by_me__c</fullName>
    <formula>CreatedById = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by me</label>
    <type>Checkbox</type>
</CustomField>