force-app/main/default/objects/WorkOrder/fields/Date_of_Travel__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Travel__c</fullName>
    <description>CRM-6981: Create a Ticketing/Refund Request</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Travel</label>
    <type>Date</type>
</CustomField>