force-app/main/default/objects/WorkOrder/fields/External_System_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>External_System_Reference_Id__c</fullName>
    <formula>Case.External_System_Reference_Id__c</formula>
    <label>External System Reference Id</label>
    <type>Text</type>
</CustomField>