force-app/main/default/objects/WorkOrder/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <formula>IF(
AND(
ISPICKVAL(Case.QAC_Request_Country__c,&apos;AU&apos;),
ISPICKVAL(Case.Travel_Type__c,&apos;Domestic&apos;)
),
0.10,
IF(
AND(
ISPICKVAL(Case.QAC_Request_Country__c,&apos;NZ&apos;),
ISPICKVAL(Case.Travel_Type__c,&apos;Domestic&apos;)
),
0.15,
0.00)
)</formula>
    <label>GST %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>