force-app/main/default/objects/WorkOrder/fields/GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>GST_Amount__c</fullName>
    <formula>TotalPrice - Sub_Total__c</formula>
    <label>GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>