force-app/main/default/objects/WorkOrder/fields/Have_the_mandatory_steps_been_completed__c.field-meta.xml
<CustomField>
    <fullName>Have_the_mandatory_steps_been_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-6981: Create a Ticketing/Refund Request</description>
    <label>Have the mandatory steps been completed?</label>
    <type>Checkbox</type>
</CustomField>