force-app/main/default/objects/WorkOrder/fields/Is_the_FOP_correct_in_the_booking__c.field-meta.xml
<CustomField>
    <fullName>Is_the_FOP_correct_in_the_booking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-6981: Create a Ticketing/Refund Request</description>
    <label>Is the FOP correct in the booking?</label>
    <type>Checkbox</type>
</CustomField>