force-app/main/default/objects/WorkOrder/fields/Original_FOP_still_valid__c.field-meta.xml
<CustomField>
    <fullName>Original_FOP_still_valid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-6981: Create a Ticketing/Refund Request</description>
    <inlineHelpText>Required for Refund Follow Up</inlineHelpText>
    <label>Original FOP still valid?</label>
    <type>Checkbox</type>
</CustomField>