force-app/main/default/objects/WorkOrder/fields/Refund_mask_completed__c.field-meta.xml
<CustomField>
    <fullName>Refund_mask_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-6981: Create a Ticketing/Refund Request</description>
    <inlineHelpText>Required for Refund Follow Up</inlineHelpText>
    <label>Refund mask completed?</label>
    <type>Checkbox</type>
</CustomField>