force-app/main/default/objects/WorkOrder/fields/Revera_checked_and_PNR_remarked__c.field-meta.xml
<CustomField>
    <fullName>Revera_checked_and_PNR_remarked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-6981: Create a Ticketing/Refund Request</description>
    <inlineHelpText>Required for Aged Ticket Refunds</inlineHelpText>
    <label>Revera checked and PNR remarked</label>
    <type>Checkbox</type>
</CustomField>