force-app/main/default/objects/WorkOrder/fields/Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total__c</fullName>
    <formula>IF(
AND(
ISPICKVAL(Case.QAC_Request_Country__c,&apos;AU&apos;),
ISPICKVAL(Case.Travel_Type__c,&apos;Domestic&apos;)
),
TotalPrice - (TotalPrice / 11),
IF(
AND(
ISPICKVAL(Case.QAC_Request_Country__c,&apos;NZ&apos;),
ISPICKVAL(Case.Travel_Type__c,&apos;Domestic&apos;)
),
TotalPrice - (TotalPrice * 3/ 23),
TotalPrice)
)</formula>
    <label>Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>