force-app/main/default/objects/WorkOrder/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <description>CRM-6981: Create a Ticketing/Refund Request</description>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refund follow up</fullName>
            </value>
            <value>
                <fullName>Qantas pass refund</fullName>
            </value>
            <value>
                <fullName>Downgrade refund</fullName>
            </value>
            <value>
                <fullName>Bpay refund</fullName>
            </value>
            <value>
                <fullName>AMOP refund</fullName>
            </value>
            <value>
                <fullName>Aged ticket refund</fullName>
            </value>
            <value>
                <fullName>Pending Authority Reversal</fullName>
            </value>
            <value>
                <fullName>Changed FP Refund Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>