force-app/main/default/objects/WorkOrder/fields/Total_Payable_Credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable_Credits__c</fullName>
    <description>QAC</description>
    <label>Total Payable Credits</label>
    <summarizedField>WorkOrderLineItem.Product_Credit_Value__c</summarizedField>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>