force-app/main/default/objects/WorkOrder/fields/WO_Owner_Location__c.field-meta.xml
<CustomField>
    <fullName>WO_Owner_Location__c</fullName>
    <description>CRM-8088</description>
    <formula>TEXT( Owner:User.Location__c )</formula>
    <label>Owner Location</label>
    <type>Text</type>
</CustomField>