force-app/main/default/objects/WorkOrder/recordTypes/Disruption_Expenses.recordType-meta.xml
<RecordType>
    <fullName>Disruption_Expenses</fullName>
    <active>true</active>
    <label>Disruption Expenses</label>
</RecordType>