force-app/main/default/objects/WorkOrder/recordTypes/QCC_Refund_Request.recordType-meta.xml
<RecordType>
    <fullName>QCC_Refund_Request</fullName>
    <active>true</active>
    <description>To create a refund support request for processing with approval from a Team Coach.</description>
    <label>CCC Refund Request</label>
</RecordType>