force-app/main/default/objects/WorkOrder/recordTypes/QCC_Ticketing_Request.recordType-meta.xml
<RecordType>
    <fullName>QCC_Ticketing_Request</fullName>
    <active>true</active>
    <description>To create a ticketing support request for processing with approval from a Team Coach.</description>
    <label>CCC Ticketing Request</label>
</RecordType>