force-app/main/default/objects/WorkOrder/validationRules/QAC_CaseNumberCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>QAC_CaseNumberCheck</fullName>
    <active>true</active>
    <description>Case is Mandatory for Work Order Object.</description>
    <errorConditionFormula>AND(
RecordType.Name = &apos;Service Request&apos;,
OR(
ISBLANK(CaseId),
Case.RecordType.Name &lt;&gt; &apos;Service Request&apos;
)
)</errorConditionFormula>
    <errorDisplayField>CaseId</errorDisplayField>
    <errorMessage>Please provide a valid Service Request Case Number</errorMessage>
</ValidationRule>