force-app/main/default/objects/WorkOrder/validationRules/QCCRefundMandatorySteps.validationRule-meta.xml
<ValidationRule>
    <fullName>QCCRefundMandatorySteps</fullName>
    <active>true</active>
    <description>CRM-7224: Assign Ticketing/Refund request to queue as a TC</description>
    <errorConditionFormula>Owner:Queue.QueueName ==&apos;QCC Refunds&apos; &amp;&amp;  RecordType.DeveloperName == &apos;QCC_Refund_Request&apos; &amp;&amp;  Have_the_mandatory_steps_been_completed__c  &lt;&gt; TRUE</errorConditionFormula>
    <errorMessage>Ensure that mandatory checks have been completed.</errorMessage>
</ValidationRule>