force-app/main/default/objects/WorkOrder/listViews/AKL_Work_Orders_More_Info_Needed.listView-meta.xml
<ListView>
    <fullName>AKL_Work_Orders_More_Info_Needed</fullName>
    <columns>Name</columns>
    <columns>RecordType</columns>
    <columns>Subtype__c</columns>
    <columns>PNR__c</columns>
    <columns>CreatedBy</columns>
    <columns>Status</columns>
    <columns>Owner</columns>
    <columns>CreatedDate</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>Case</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>WorkOrder.QCC_Refund_Request,WorkOrder.QCC_Ticketing_Request</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>More information needed</value>
    </filters>
    <filters>
        <field>WO_Owner_Location__c</field>
        <operation>equals</operation>
        <value>Auckland</value>
    </filters>
    <label>AKL Work Orders - More Info Needed</label>
</ListView>