force-app/main/default/objects/WorkOrder/listViews/All_Refund_Work_Orders.listView-meta.xml
<ListView>
    <fullName>All_Refund_Work_Orders</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Priority</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <columns>Case</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>WorkOrder.QCC_Refund_Request</value>
    </filters>
    <label>All Refund Work Orders</label>
</ListView>