force-app/main/default/objects/WorkOrder/listViews/My_WorkOrders.listView-meta.xml
<ListView>
    <fullName>My_WorkOrders</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Account</columns>
    <columns>Priority</columns>
    <columns>Status</columns>
    <columns>Case</columns>
    <columns>CreatedDate</columns>
    <columns>IsClosed</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>PNR__c</columns>
    <columns>RecordType</columns>
    <filterScope>Everything</filterScope>
    <label>My Work Orders</label>
</ListView>