force-app/main/default/objects/WorkOrder/listViews/Refund_Processing_Support_Requests.listView-meta.xml
<ListView>
    <fullName>Refund_Processing_Support_Requests</fullName>
    <columns>Name</columns>
    <columns>RecordType</columns>
    <columns>Subtype__c</columns>
    <columns>PNR__c</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <columns>Owner</columns>
    <columns>Case</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>WorkOrder.QCC_Refund_Request</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>notEqual</operation>
        <value>In Progress,Waiting for Finance,Pending Cover Refund,Completed,Closed,Canceled,More information needed</value>
    </filters>
    <label>Refund Support Requests</label>
    <queue>CCC_Refunds</queue>
</ListView>