force-app/main/default/objects/WorkOrder/listViews/Refund_Requests_Changed_FP.listView-meta.xml
<ListView>
    <fullName>Refund_Requests_Changed_FP</fullName>
    <columns>Name</columns>
    <columns>RecordType</columns>
    <columns>Subtype__c</columns>
    <columns>PNR__c</columns>
    <columns>Status</columns>
    <columns>Owner</columns>
    <columns>Case</columns>
    <columns>CreatedDate</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subtype__c</field>
        <operation>equals</operation>
        <value>Changed FP Refund Request</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>notEqual</operation>
        <value>Completed,Closed</value>
    </filters>
    <label>Refund Requests - Changed FP</label>
</ListView>