force-app/main/default/objects/WorkOrder/listViews/Refund_Requests_Waiting_for_Finance.listView-meta.xml
<ListView>
    <fullName>Refund_Requests_Waiting_for_Finance</fullName>
    <columns>Name</columns>
    <columns>RecordType</columns>
    <columns>Subtype__c</columns>
    <columns>PNR__c</columns>
    <columns>Status</columns>
    <columns>Owner</columns>
    <columns>Case</columns>
    <columns>CreatedDate</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>WorkOrder.QCC_Refund_Request</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Waiting for Finance</value>
    </filters>
    <label>Refund Requests - Waiting for Finance</label>
    <queue>CCC_Refunds</queue>
</ListView>