force-app/main/default/objects/WorkOrder/listViews/Refund_Support_Requests_In_Progress.listView-meta.xml
<ListView>
    <fullName>Refund_Support_Requests_In_Progress</fullName>
    <columns>Name</columns>
    <columns>RecordType</columns>
    <columns>Subtype__c</columns>
    <columns>PNR__c</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <columns>LastModifiedDate</columns>
    <columns>Owner</columns>
    <columns>Case</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>WorkOrder.QCC_Refund_Request</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>In Progress,Waiting for Finance,Pending Cover Refund</value>
    </filters>
    <label>Refund Support Requests - In Progress</label>
</ListView>