force-app/main/default/objects/WorkOrder/listViews/Refund_Ticketing_Requests.listView-meta.xml
<ListView>
    <fullName>Refund_Ticketing_Requests</fullName>
    <columns>Name</columns>
    <columns>RecordType</columns>
    <columns>Subtype__c</columns>
    <columns>PNR__c</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <columns>Owner</columns>
    <columns>Case</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>WorkOrder.QCC_Refund_Request,WorkOrder.QCC_Ticketing_Request</value>
    </filters>
    <label>Refund &amp; Ticketing - All Requests</label>
</ListView>