force-app/main/default/objects/WorkOrder/listViews/SUV_Resolutions_Consultants_Work_Orders.listView-meta.xml
<ListView>
    <fullName>SUV_Resolutions_Consultants_Work_Orders</fullName>
    <columns>Name</columns>
    <columns>RecordType</columns>
    <columns>Subtype__c</columns>
    <columns>PNR__c</columns>
    <columns>CreatedBy</columns>
    <columns>CreatedDate</columns>
    <columns>Status</columns>
    <columns>Owner</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>Case</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>WorkOrder.QCC_Refund_Request,WorkOrder.QCC_Ticketing_Request</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>notEqual</operation>
        <value>Closed,Completed,Canceled</value>
    </filters>
    <filters>
        <field>CreatedBy</field>
        <operation>equals</operation>
        <value>Atasa Bolatolu,Dikove Babakobau,Kelera Tuva,Katarina Veremalua,Cema Vula,Lavinia Rakuvau,Laura Tora,Ana Romanu,Mitieli Nabolakase,Samuela Ralawe,Vasemaca Saumadu,Gabriele Wainisau,Meri Leqe,Adi Rua Naulivou,Nina Tafunai,Frances Naigia</value>
    </filters>
    <label>SUV Resolutions Work Orders - Open</label>
</ListView>